--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,88 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* Fonts */
+@font-face {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	src: local("../public/fonts/Roboto.woff2");
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+		U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+		U+2215, U+FEFF, U+FFFD;
 }
 
-* {
-  box-sizing: border-box;
+@font-face {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 500;
+	src: local("../public/fonts/Roboto-Medium.woff2");
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+		U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+		U+2215, U+FEFF, U+FFFD;
+}
+
+.bold {
+	font-weight: 400;
+}
+
+/* Widths and Heights*/
+.w-100 {
+	width: 100%;
+}
+
+/* Font Sizes*/
+.large {
+	font-size: 24px;
+}
+
+.semi-large {
+	font-size: 18px;
+}
+
+.small {
+	font-size: 14px;
+}
+
+/* Letter Spacing */
+.spacing-1 {
+	letter-spacing: 1px;
+}
+
+.spacing-2 {
+	letter-spacing: 2px;
+}
+
+.spacing-4 {
+	letter-spacing: 4px;
+}
+
+/* Flex */
+.flex {
+	display: flex;
+}
+
+.justify-between {
+	justify-content: space-between;
+}
+
+.m-0 {
+	margin: 0;
+}
+
+.mb-0 {
+	margin-bottom: 0;
+}
+
+.my-2 {
+	margin-top: 8px;
+	margin-bottom: 8px;
+}
+
+.text-center {
+	text-align: center;
 }
